--- a/subscribe.html
+++ b/subscribe.html
@@ -108,6 +108,9 @@
                                 if(password[0] != password[0].toUpperCase()){
                                     alert('Make sure it password starts with capital letter');
                                     return false;
+                                }else{
+                                    alert('Thank you for subscribing');
+                                    return true;
                                 }
                             }
                         }
