--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Zara&copy; Official - Contact us</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -28,19 +30,22 @@
         </div>
     </div>
     <!-- EO Header -->
-    
-        <div class="contactuspage">
-            <div class="container">
+
+    <div class="contactuspage">
+        <div class="container">
             <div class="header">
                 <h2>Stay In Touch With Us</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                    has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is
+                    simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply
+                    dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy
+                    text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                 <address>39 Gamet El Dewal El Arabia St.,<br>MOHANDESEEN</address>
-                <h4>Telephone:</h4><strong>01112658502</strong>
             </div>
-            </div>
-            <div class="contactform">
-                <div class="container">
-                  <form action="action_page.php">
+        </div>
+        <div class="contactform">
+            <div class="container">
+                <form action="action_page.php">
 
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Enter your first name " required>
@@ -68,10 +73,10 @@
 
                     <input type="submit" value="Send Your Request">
 
-                  </form>
+                </form>
             </div>
-                </div>
         </div>
+    </div>
 
 
 
