--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Zara&copy; Official</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
 
 
 </head>
@@ -16,17 +18,18 @@
     <div class="header">
         <div class="navbar">
             <div class="container">
-                <!-- <h2>Z<span>a</span>ra</h2>-->
-                <a href="index.html"><img src="images/logo3.png"></a>
-                <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a class="active" href="men.html">Men</a></li>
-                    <li><a class="active" href="women.html">Women</a></li>
-                    <li><a class="active" href="kids.html">Kids</a></li>
-                    <li><a class="active" href="stores.html">Stores</a></li>
-                    <li><a class="active" href="subscribe.html">Subscribe</a></li>
-                    <li><a class="active" href="contact.html">Contact us</a></li>
-                </ul>
+                <div class="clearfix">
+                    <a href="index.html"><img src="images/logo3.png"></a>
+                    <ul>
+                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a class="active" href="men.html">Men</a></li>
+                        <li><a class="active" href="women.html">Women</a></li>
+                        <li><a class="active" href="kids.html">Kids</a></li>
+                        <li><a class="active" href="stores.html">Stores</a></li>
+                        <li><a class="active" href="subscribe.html">Subscribe</a></li>
+                        <li><a class="active" href="contact.html">Contact us</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="slidermen">
@@ -104,6 +107,7 @@
             <div class="text">
                 <span>zara&copy; all copyrights reserved</span>
             </div>
+
             <div class="social">
                 <ul>
                     <li>
@@ -117,6 +121,7 @@
                     </li>
                 </ul>
             </div>
+
         </div>
     </div>
     <!-- EO Footer -->
