--- a/kids.html
+++ b/kids.html
@@ -6,6 +6,8 @@
     <title>Zara&copy; Official - Kids</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -42,15 +44,18 @@
                 <h2>Here is the new collection for kids</h2>
             </div>
             <div class="bigphoto">
-                <div><img src="images/Kids/1.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/2.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/3.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/4.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/1.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/2.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/3.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/4.jpg" alt="kid model"></div>
-                <div><img src="images/Kids/1.jpg" alt="kid model"></div>
+                <div class="pic"><img src=" images/Kids/1.jpg " alt="kid model "></div>
+                <div class="pic"><img src="images/Kids/2.jpg" alt="kid model"></div>
+                <div class="pic"><img src=" images/Kids/3.jpg " alt="kid model "></div>
+                <div class="pic"><img src="images/Kids/4.jpg" alt="kid model"></div>
+                <div class="pic"><img src=" images/Kids/1.jpg " alt="kid model "></div>
+                <div class="pic"><img src="images/Kids/2.jpg" alt="kid model"></div>
+                <div class="pic"><img src=" images/Kids/3.jpg " alt="kid model "></div>
+                <div class="pic"><img src="images/Kids/4.jpg" alt="kid model"></div>
+                <div class="pic"><img src=" images/Kids/1.jpg " alt="kid model "></div>
+                <div class="pic"><img src="images/Kids/2.jpg" alt="kid model"></div>
+                <div class="pic"><img src=" images/Kids/3.jpg " alt="kid model "></div>
+                <div class="pic"><img src="images/Kids/4.jpg" alt="kid model"></div>
 
 
             </div>
