--- a/men.html
+++ b/men.html
@@ -6,6 +6,8 @@
     <title>Zara&copy; Official - Men</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -41,15 +43,18 @@
                 <h2>Here is the new collection for men</h2>
             </div>
             <div class="bigphoto">
-                <div><img src="images/Men/1.jpg" alt="Model"></div>
-                <div><img src="images/Men/2.jpg" alt="Model"></div>
-                <div><img src="images/Men/3.jpg" alt="Model"></div>
-                <div><img src="images/Men/4.jpg" alt="Model"></div>
-                <div><img src="images/Men/5.jpg" alt="Model"></div>
-                <div><img src="images/Men/1.jpg" alt="Model"></div>
-                <div><img src="images/Men/2.jpg" alt="Model"></div>
-                <div><img src="images/Men/3.jpg" alt="Model"></div>
-                <div><img src="images/Men/4.jpg" alt="Model"></div>
+                <div class="pic"><img src="images/Men/1.jpg" alt="Model"></div>
+                <div class="pic"><img src=" images/Men/2.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/3.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/4.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/5.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/1.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/2.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/3.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/4.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/5.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/1.jpg " alt="Model "></div>
+                <div class="pic"><img src=" images/Men/2.jpg " alt="Model "></div>
 
 
             </div>
@@ -62,21 +67,21 @@
 
 
     <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="text">
+    <div class="footer ">
+        <div class="container ">
+            <div class="text ">
                 <span>zara&copy; all copyrights reserved</span>
             </div>
-            <div class="social">
+            <div class="social ">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com" target="_blank"><img src="images/social/facebook.png"></a>
+                        <a href="https://www.facebook.com " target="_blank "><img src="images/social/facebook.png "></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com" target="_blank"><img src="images/social/instagram.png"></a>
+                        <a href="https://www.instagram.com " target="_blank "><img src="images/social/instagram.png "></a>
                     </li>
                     <li>
-                        <a href="https://www.twitter.com" target="_blank"><img src="images/social/twitter.png"></a>
+                        <a href="https://www.twitter.com " target="_blank "><img src="images/social/twitter.png "></a>
                     </li>
                 </ul>
             </div>
