--- a/women.html
+++ b/women.html
@@ -6,6 +6,8 @@
     <title>Zara&copy; Official - Women</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -42,15 +44,20 @@
                 <h2>Here is the new collection for women</h2>
             </div>
             <div class="bigphoto">
-                <div><img src="images/Women/1.jpg"></div>
-                <div><img src="images/Women/2.jpg"></div>
-                <div><img src="images/Women/3.jpg"></div>
-                <div><img src="images/Women/4.jpg"></div>
-                <div><img src="images/Women/5.jpg"></div>
-                <div><img src="images/Women/6.jpg"></div>
-                <div><img src="images/Women/7.jpg"></div>
-                <div><img src="images/Women/8.jpg"></div>
-                <div><img src="images/Women/9.jpg"></div>
+                <div class="pic"><img src="images/Women/1.jpg"></div>
+                <div class="pic"><img src="images/Women/2.jpg"></div>
+                <div class="pic"><img src="images/Women/3.jpg"></div>
+                <div class="pic"><img src="images/Women/4.jpg"></div>
+                <div class="pic"><img src="images/Women/5.jpg"></div>
+                <div class="pic"><img src="images/Women/6.jpg"></div>
+                <div class="pic"><img src="images/Women/7.jpg"></div>
+                <div class="pic"><img src="images/Women/8.jpg"></div>
+                <div class="pic"><img src="images/Women/9.jpg"></div>
+                <div class="pic"><img src="images/Women/1.jpg"></div>
+                <div class="pic"><img src="images/Women/2.jpg"></div>
+                <div class="pic"><img src="images/Women/3.jpg"></div>
+
+
 
 
             </div>
