--- a/stores.html
+++ b/stores.html
@@ -6,6 +6,8 @@
     <title>Zara&copy; Official - Stores</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
 </head>
 
 <body>
