--- a/subscribe.html
+++ b/subscribe.html
@@ -119,6 +119,8 @@
                             alert('choose your gender pls');
                             return false;
                         } else {
+                            
+                            window.location.href = 'index.html';
                             return true;
                         }
                     }
