--- a/subscribe.html
+++ b/subscribe.html
@@ -34,24 +34,24 @@
     </div>
     <!-- EO Header -->
 
-    <form action="action_page.php" onsubmit="return form_valid()">
+    <form action="action_page.php" method="POST" onsubmit="return form_valid()">
         <div class="container_form">
             <h2>Please fill in this form to create an account.</h2>
             <hr>
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+            <input type="text" id="fname" pattern="[A-Za-z]" name="firstname" placeholder="Your name.." required>
 
             <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+            <input type="text" id="lname" name="lastname" pattern="[A-Za-z]" placeholder="Your last name.." required>
 
             <label for="email">Email</label>
-            <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="enter email address example@example.com" name="email" required>
+            <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="enter email address " name="email" required>
 
             <label for="mobile">Mobile</label>
-            <input type="text" id="mobile" pattern="^\d{11,}$" name="mobilenum" placeholder="Your mobile number of 11.." required>
+            <input type="text" id="mobile" pattern="^\d{11,}$" name="mobilenum" placeholder="Your mobile number - min 11 digit" required>
 
             <label for="address">Address</label>
-            <input type="text" id="address" name="address" placeholder="Your address.." required>
+            <input type="text" id="address" name="address" pattern="[a-zA-Z0-9]+" placeholder="Your address.." required>
 
             <label for="gender">Gender</label>
             <select id="gender" name="gender">
@@ -119,7 +119,7 @@
                             alert('choose your gender pls');
                             return false;
                         } else {
-                            
+                            alert('thank you');
                             window.location.href = 'index.html';
                             return true;
                         }
